--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -29,5 +29,5 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@4.1.7
         with:
           branch: gh-pages
-          folder: build/web
+          folder: ${{ env.GAME }}/build/web
           target-folder: ${{ env.GAME }}
