--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -4,12 +4,12 @@ on:
   push:
     branches: [main]
     paths:
-      - "snake/*.py"
+      - "snake/**"
       - ".github/workflows/pygbag.yml"
   pull_request:
     branches: [main]
     paths:
-      - "snake/*.py"
+      - "snake/**"
       - ".github/workflows/pygbag.yml"
   workflow_dispatch:
 
@@ -19,6 +19,10 @@ jobs:
       GAME: snake
     name: Build and Deploy for Emscripten pygbag runtime
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pages: write
+      id-token: write
 
     steps:
       - uses: actions/checkout@v2
@@ -39,5 +43,3 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
