--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -39,9 +39,16 @@ jobs:
 
       - name: Prepare deployment
         run: |
-          mkdir -p ./deploy
+          mkdir -p ./deploy/snake
           cp README.md ./deploy/
-          mv ${{ env.GAME }}/build/web ./deploy/${{ env.GAME }}
+          mv ${{ env.GAME }}/build/web/* ./deploy/snake/
+          # Ensure README exists
+          if [ ! -f ./deploy/README.md ]; then
+            echo "# Games" > ./deploy/README.md
+            echo "Welcome to my games repository!" >> ./deploy/README.md
+            echo "## Available Games" >> ./deploy/README.md
+            echo "- [Snake](./snake/) - A classic Snake game" >> ./deploy/README.md
+          fi
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
